--- a/Legacy View Project/app/src/main/res/values/strings.xml
+++ b/Legacy View Project/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Legacy View Project</string>
     <string name="title_activity_layouts">LayoutsActivity</string>
     <string name="title_activity_recycler_view">RecyclerViewActivity</string>
+    <string name="title_activity_modifiers">ModifiersActivity</string>
 </resources>
